compiler/tests/invalid_programs/no_end_if.jm
!SyntaxError

if True
  puts("bar")
